<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Qualit\'Air</string>
    <string name="geolocated_city">Exemple : Toulouse</string>
    <string name="geolocate_button">Géolocalisez-moi !</string>
    <string name="main_activity_title">"La qualité de l'air où que vous soyez"</string>
    <string name="search_button">Rechercher !</string>
    <string name="radio_button_pollution">Pollution</string>
    <string name="nearest_city_sentence">Ville la plus proche :</string>
    <string name="radio_button_meteo_and_pollution">Météo et pollution</string>
    <string name="text_view_information">Choisissez les informations à afficher :</string>
    <string name="radio_button_meteo">Météo</string>
    <string name="place_name">Nom du lieu</string>
    <string name="gps_coordinates">Coordonées GPS</string>
    <string name="menu_title_history">Historique</string>
    <string name="menu_title_favourite">Vos favoris</string>
    <string name="set_favourite_city">Ajouter aux favoris</string>
    <string name="warning_no_radio_selection">Veuillez selectionner les informations à afficher</string>
    <string name="popup_title">Ajouter ce lieu aux favoris</string>
    <string name="popup_message">Vous pouvez renommer le lieu pour le retrouver facilement</string>
    <string name="toast_rename_error">Erreur en renommant le lieu</string>
    <string name="toast_rename_ok">\"Le nom du lieu a été remplacé par \"</string>
    <string name="cancel">Annuler</string>
    <string name="toast_popup_when_canceled">\"Le nom du lieu reste \"</string>
    <string name="add">Ajouter</string>
    <string name="well_inserted_in_bd">\" a bien été insérée dans la base de données\"</string>
    <string name="error_while_inserting_in_bd">\" n\'a pas été insérée dans la base de données\"</string>
    <string name="added_to_favourites">\" a été rajoutée aux favoris\"</string>
    <string name="error_updating_favourites">Erreur en enlevant ce lieu des favoris</string>
    <string name="well_deleted_favourites">\" a été supprimée des favoris\"</string>
    <string name="no_values_to_read">Il n\'y a pas de valeurs à lire</string>
    <string name="error_get_string_extra_display_result">Choice de la méthode getStringExtra doit être égal à l\'un des textes des radios boutons du group RadioGroup du mainActivity</string>
    <string name="pollution_survey">Relevé de pollution</string>
    <string name="main_pollutant">Principal polluant</string>
    <string name="pollution_index">Indice de pollution (AQI US)</string>
    <string name="meteorological_survey">Relevé Météorologique</string>
    <string name="temperature">Température</string>
    <string name="pressure">Pression</string>
    <string name="humidity">Humidité</string>
    <string name="wind_speed">Vitesse du vent</string>
    <string name="wind_direction">Direction du vent</string>
    <string name="meteorological_and_pollution_survey">Relevé Météorologique et de pollution</string>
    <string name="api_error">Erreur lors de l\'appel à l\'API :</string>
    <string name="gps_error">Erreur lors de la récupération des coordonnées</string>
    <string name="warning_no_city_found">Veuillez vous géolocaliser</string>
</resources>