<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/villeGeolocalisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/villeLocalisation" />

    <Button
        android:id="@+id/boutonGeolocalisation"
        android:layout_width="247dp"
        android:layout_height="70dp"
        android:layout_marginTop="34dp"
        android:background="#930303"
        android:outlineSpotShadowColor="#FFFFFF"
        android:text="@string/geolocate_button"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/villeLocalisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/geolocated_city"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boutonGeolocalisation" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="347dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Information"
        app:layout_constraintVertical_bias="0.13999999">

        <RadioButton
            android:id="@+id/radioButton_Meteo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_meteo"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton_Pollution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_pollution"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton_MeteoAndPollution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_meteo_and_pollution"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonRechercher"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:text="@string/search_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView_Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_information"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/villeGeolocalisation"
        app:layout_constraintVertical_bias="0.123" />


</androidx.constraintlayout.widget.ConstraintLayout>